adds go to contact link

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 
 <body>
   <div class="container">
-    <div class="site-header">
+    <!-- adds go to contact link -->
+    <a href="#Go_to_contact" class="Go_to_contact">To Contact</a>
+    <header class="site-header" role="banner">
+
       <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+      <nav class="main-nav" role="navigation">
+        
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
@@ -46,7 +50,9 @@
           B3T 0L0
         </p>
       </div>
-      <div class="contact-section">
+
+      <!-- adds role and link to go to contact -->
+      <div class="contact-section" role="form" id="Go_to_contact" >
         <h1>Contact Us</h1>
         <form action="thanks.html">
           <label>Full Name</label>
